云的控制基本实现

--- a/shanghai/css/style.css
+++ b/shanghai/css/style.css
@@ -75,3 +75,9 @@ body {
     margin: 0;
     cursor: ew-resize;
 }
+/* 云 */
+#cloudPosition button{
+    width:20px;
+    height: 20px;
+    padding: 0;
+}
