--- a/indoor3D/css/indoor3D.css
+++ b/indoor3D/css/indoor3D.css
@@ -18,7 +18,6 @@
     }
 }
 
-
 .floorsUI, .testButton
 {
     position: absolute;;
@@ -29,6 +28,7 @@
 
 .floorsUI{
     top:100px;
+    width: 40px;
 }
 
 .testButton{
@@ -49,7 +49,7 @@
     border: 1px solid #bbbbbb;
     text-align: center;
     list-style-type:none;
-
+    height: 18px;
 }
 
 .floorsUI .selected{
